--- a/Homework_2.tex
+++ b/Homework_2.tex
@@ -110,7 +110,7 @@ $$n = 1; T(1) = 1$$
         \frac{3^{k-1}T(n-(k-1))}{2} + \frac{3^{k-1} - 1}{2}
     \end{cases}
 \]
-\\Assume for an arbitrary $n,k; T(n) \leq \frac{3^o-1}{2}$
+\\Assume for an arbitrary $n,k; T(n) \leq \frac{3^k-1}{2}$
 \item[3.] Inductive Step:
 \begin{gather*}
 \text{if $k > 1$}\\
@@ -124,5 +124,13 @@ T(0) = \frac{3^{k} - 1}{2}\\
 T(n) \epsilon O(3^k)\\
 \end{gather*}
 \end{enumerate}
+\end{enumerate}
+\begin{enumerate}
+\item [(12 points) 1.] State two different self-reductions for the \texttt{SUM} problem. Use the self-reduction examples from the lectures as a guide.
+
+\item [(12 points) 2.] Give recursive algorithms based on your divide-and-conquer self-reductions to solve the \texttt{SUM} problem.
+
+\item [(6 points) 3.] What are the worst-case runtimes of the solutions you have generated. (Just state the runtimes. You do not need to show your work.)
+
 \end{enumerate}
 \end{document}
