--- a/Homework_2.tex
+++ b/Homework_2.tex
@@ -120,7 +120,7 @@ T(n) = \frac{3^{k}(3T(n-k)}{2} + \frac{3^{k} - 1}{2}\\
 \text{for $n = k$}\\
 T(n) = \frac{3^{k}*0}{2} + \frac{3^{k} - 1}{2}\\
 T(n) = 0 + \frac{3^{k} - 1}{2}\\
-T(0) = \frac{3^{k} - 1}{2}\\
+T(n) = \frac{3^{k} - 1}{2}\\
 T(n) \epsilon O(3^k)\\
 \end{gather*}
 \end{enumerate}
