--- a/Homework_2.tex
+++ b/Homework_2.tex
@@ -55,8 +55,8 @@ $$n = 1; T(1) = 1$$
 \begin{gather*}
 \text{if $k > 1$}\\
 T(k + 1) = T(k) + 1\\
-T(k + 1) = k + 1 + 1\\  
-T(k + 1) = k + 2\\
+T(k + 1) \leq k + 1\\  
+T(k + 1) \leq k + 1\\
 T(k + 1) \epsilon O(k)
 \end{gather*}
 \end{enumerate}
@@ -80,7 +80,7 @@ A[a] & \textrm{ if } a = b\\
     \ElsIf{($a == b$)}
         \State return A[a]
     \ElsIf{($a < b$)}
-        \State return Max(FindMax(A,a,$t_1$,$t_2$), Max(FindMax(A, a, $t_1$+1,$t_2$), FindMax(A, a, $t_1$,$t_2$+1]))
+        \State return Max(FindMax(A,a+1,$t_1$,$t_2$), Max(FindMax(A, a, $t_1$+1,$t_2$), FindMax(A, a, $t_1$,$t_2$+1]))
     \EndIf
 \EndProcedure
 \Procedure{Max}{$a,b$}
@@ -91,39 +91,27 @@ A[a] & \textrm{ if } a = b\\
 For what it's worth, I don't think this algorithm will find the max element if it is contained within the first third of the array(we never iterate over the first third elements, only the second and last third), but it does match the self-reduction.
 \item [(7 points) 4.] Using the same reduction as part 3 now state a recurrence $T(n)$ that expresses the worst case run time of the recursive algorithm. You do not need to formally prove your recurrence, but you have to show that it is a reasonable guess by using a recursion tree or by the repeated substitution method.
 \textit{Hint: assume that $n$ is a power of 3}.\\\\
-I assumed, for purposes of the problem, that we did iterate through each third of the array evenly. For the purposes of this problem $m$ will represent the length of the array and $n$ will represent the three way recurrences. I'll be honest, on this one I got sort of lost, being confused from the time before. I followed the recurrent, tower of hanoi example from pages 1-4 in Knuth's Concrete Mathematics. I made slight modifications to the reasoning. For instance, $3^{k-1}T(n-(k-1)) + 3^{k-1} + 3$, if this example was strictly like the tower of hanoi problem but my reasoning is that you only ever make two comparisons after you do the first recursive step so instead of adding $3$ you minus $1$.
+I assumed, for purposes of the problem, that we did iterate through each third of the array evenly and like you said that $n = 3^\psi$. Intuitively I expect this to be a worst case linear runtime, which case each last element of the subarrays would be a local max but let propose a semi-formal argument for such. Let us assume the following recurrence reduction.
 \[
   T(n) =
     \begin{cases}
         1 & \text{if $n = 1$} \\
-        \frac{3^{k-1}T(n-(k-1))}{2} + \frac{3^{k-1} - 1}{2} & \text{if $n > 1$}
+        3T(\frac{n}{3}) + d & \text{if $k > 1$}
     \end{cases}
 \]
-\begin{enumerate}
-\item[1.] Base Case:\\
-$$n = 1; T(1) = 1$$
-\item[2.] Inductive Hypothesis:\\
-\[
-  T(n) =
-    \begin{cases}
-        1 & \text{if $p = 1$} \\
-        \frac{3^{k-1}T(n-(k-1))}{2} + \frac{3^{k-1} - 1}{2}
-    \end{cases}
-\]
-\\Assume for an arbitrary $n,k; T(n) \leq \frac{3^k-1}{2}$
-\item[3.] Inductive Step:
-\begin{gather*}
-\text{if $k > 1$}\\
-T(n) = \frac{3^{k-1}T(n-(k-1))}{2} + \frac{3^{k-1} - 1}{2}\\
-T(n) = \frac{3^{k-1}(3T(n-k)+ 1)}{2} + \frac{3^{j-1} - 1}{2}\\
-T(n) = \frac{3^{k}(3T(n-k)}{2} + \frac{3^{k} - 1}{2}\\
-\text{for $n = k$}\\
-T(n) = \frac{3^{k}*0}{2} + \frac{3^{k} - 1}{2}\\
-T(n) = 0 + \frac{3^{k} - 1}{2}\\
-T(n) = \frac{3^{k} - 1}{2}\\
-T(n) \epsilon O(3^k)\\
-\end{gather*}
-\end{enumerate}
+\begin{align*}
+\text{if $k > 1$ and $let n = 3^\psi$}\\
+T(n) &= 3T(\frac{n}{3}) + d\\
+T(n) &= 3T(3^{\psi - 1}) + 3^{\psi} + d\\
+T(n) &= 3T(3^{\psi - 2}) + 3^{\psi - 1} + 3^{\psi} + d\\
+T(n) &= 3T(3^{\psi - 3}) + 3^{\psi - 2} + 3^{\psi - 1} + 3^{\psi}  + d\\
+&\vdots\\
+T(n) &= 3^{0} + \dots + 3^{\psi - 2} + 3^{\psi - 1} + 3^{\psi}  + d + d\\
+T(n) &= \sum_{\psi=0}^{k} + d\\
+T(n) &= \frac{3^{k+1} - 1}{2} + d\\
+T(n) &= \frac{3n - 1}{2} + d\\
+T(n) &= \epsilon O(n)\\
+\end{align*}\\
 \end{enumerate}
 \begin{enumerate}
 \item [(12 points) 1.] State two different self-reductions for the \texttt{SUM} problem. Use the self-reduction examples from the lectures as a guide.
