half of page 2 done

--- a/Homework_2.tex
+++ b/Homework_2.tex
@@ -15,7 +15,7 @@
 \item [(3 points) 1.] Below is a self-reduction for the \texttt{MAX} problem. State a recursive algorithm using pseudocode for finding the maximum element based on this self-reduction.\\
 \begin{algorithm}
 \caption{Find Max integer in an Array with simple recursion}
-\label{array-sum}
+\label{array-max}
 \begin{algorithmic}[1]
 \Procedure{Find Max}{$A$}
     \If{($a == b$)}
@@ -57,7 +57,9 @@ $$n = 1; T(1) = 1$$
 T(k + 1) = T(k) + 1\\
 T(k + 1) \leq k + 1\\  
 T(k + 1) \leq k + 1\\
-T(k + 1) \epsilon O(k)
+T(k + 1) \epsilon O(k)\\
+\therefore\\
+T(k) \epsilon O(k)\\
 \end{gather*}
 \end{enumerate}
 \item [(9 points) 3.] Below is a self-reduction for the \texttt{MAX} problem. State a recursive algorithm using pseudocode for finding the maximum element based on this self-reduction.\\\\\
@@ -72,7 +74,7 @@ A[a] & \textrm{ if } a = b\\
 \]
 \begin{algorithm}
 \caption{Find Max integer in an Array with 3-Way Split}
-\label{array-sum}
+\label{array-max}
 \begin{algorithmic}[1]
 \Procedure{Find Max}{$A,a,t_1,t_2$}
     \If{($a > b$)}
@@ -106,19 +108,61 @@ T(n) &= 3T(3^{\psi - 1}) + 3^{\psi} + d\\
 T(n) &= 3T(3^{\psi - 2}) + 3^{\psi - 1} + 3^{\psi} + d\\
 T(n) &= 3T(3^{\psi - 3}) + 3^{\psi - 2} + 3^{\psi - 1} + 3^{\psi}  + d\\
 &\vdots\\
-T(n) &= 3^{0} + \dots + 3^{\psi - 2} + 3^{\psi - 1} + 3^{\psi}  + d + d\\
-T(n) &= \sum_{\psi=0}^{k} + d\\
+T(n) &= 3^{0} + \dots + 3^{\psi - 2} + 3^{\psi - 1} + 3^{\psi}  + d\\
+T(n) &= \sum_{\psi=0}^{k}3^{\psi} + d\\
 T(n) &= \frac{3^{k+1} - 1}{2} + d\\
 T(n) &= \frac{3n - 1}{2} + d\\
 T(n) &= \epsilon O(n)\\
 \end{align*}\\
 \end{enumerate}
 \begin{enumerate}
-\item [(12 points) 1.] State two different self-reductions for the \texttt{SUM} problem. Use the self-reduction examples from the lectures as a guide.
+\item [(12 points) 1.] State two different self-reductions for the \texttt{SUM} problem. Use the self-reduction examples from the lectures as a guide.\\
+\\For this problem I decided to use divide and conquer for the second self-reduction and just normal recursion for the second. I don't think these are good ways to sum over an array, there are a lot of wasted computations but it is quite readable. The first algorithm simply completes a summation on the array in reverse order. The second algorithm sums the even and odd elements at the same time.{
+\[
+  T(n) =
+    \begin{cases}
+        1 & \text{if $n = 1$} \\
+        T(n - 1) + 1 & \text{if $k > 1$}
+    \end{cases}
+\]
+\[
+  T(n) =
+    \begin{cases}
+        1 & \text{if $n = 1$} \\
+        2T(\frac{n}{2}) + d & \text{if $k > 1$}
+    \end{cases}
+\]
+}
+\\\item [(12 points) 2.]{ Give recursive algorithms based on your divide-and-conquer self-reductions to solve the \texttt{SUM} problem.\\\\
+\begin{algorithm}
+\caption{Find Sum of an Array via Simple Recursion}
+\label{array-sum}
+\begin{algorithmic}[1]
+\Procedure{Find Sum}{$A,n$}
+    \If{($n \leq 0$)}
+        \State return 0
+    \Else
+        \State return FindSum(A, n - 1) + A[n - 1]
+    \EndIf
+\EndProcedure
+\end{algorithmic}
+\end{algorithm}
 
-\item [(12 points) 2.] Give recursive algorithms based on your divide-and-conquer self-reductions to solve the \texttt{SUM} problem.
-
-\item [(6 points) 3.] What are the worst-case runtimes of the solutions you have generated. (Just state the runtimes. You do not need to show your work.)
-
+\begin{algorithm}
+\caption{Find Sum of an Array via Divide and Conquer}
+\label{array-sum}
+\begin{algorithmic}[1]
+\Procedure{Find Sum}{$A,n$}
+    \If{($n \leq 0$)}
+        \State return 0
+    \Else
+        \State return FindSum(A, n-2) + FindSum(A, (n == n) ? n - 1 : n - 2) + A[n - 1]
+    \EndIf
+\EndProcedure
+\end{algorithmic}
+\end{algorithm}
+}
+\item [(6 points) 3.] What are the worst-case runtimes of the solutions you have generated. (Just state the runtimes. You do not need to show your work.)\\\\
+Both algorithm operate in linear time with a worst case runtime of $O(n)$. In fact I can make the argument that both functions are $\Theta(n)$. I came to this conclusion from reading Tim Roughgarden's Algorithms Illuminated page 56-57 where he states then proves theorem $max\{f(n),g(n)\} = \Theta(f(n) + g(n))$. Both algorithms are bounded by some constant multiple of $n$, while algorithm 4 operates slightly slower than 3, they both follow this fact. If we take the max of the two, which would be algorithm 4, that still operates in linear time. From this information I came to the firm conclusion that both algorithms were operating in $\Theta(n)$. I hope this makes sense to you. I know it's a roundabout way of thinking about this problem but it's what helped me come to a conclusion so I thought I would include it.
 \end{enumerate}
 \end{document}
