--- a/Homework_2.tex
+++ b/Homework_2.tex
@@ -56,8 +56,8 @@ $$n = 1; T(1) = 1$$
 \begin{gather*}
 \text{if $k > 1$}\\
 T(k + 1) = T(k) + 1\\
-T(k + 1) \leq k + 1\\  
-T(k + 1) \leq k + 1\\
+T(k + 1) = T(k - 1) + 1 + 1\\  
+T(k + 1) = k + 2\\
 T(k + 1) \epsilon O(k)\\
 \therefore\\
 T(k) \epsilon O(k)\\
@@ -299,10 +299,10 @@ Again no domain or value was given for $C$ but assuming that $C=1$ we can safely
 \textbf{Inductive Hypothesis}\\
 \begin{align*}
 T(n) &=T(\left\lfloor\frac{n}{2}\right\rfloor) + T(\left\lfloor\frac{n}{4}\right\rfloor) + 4n\\
-T(n) &= -2.27056n^{0.694242}+3.27056n\forall{n>1}\\
-T(n) &\epsilon \Theta(n)\\
+g(n) &= -2.27056n^{0.694242}+3.27056n\forall{n>1}\\
 \end{align*}\\
 \textbf{Inductive Step}\\
+My reasoning for this will be by the following. If we look at our tree in the adjacent pdf, the leaves do not terminate in a uniform manner. This makes the problem illsuited for induction, but alas we will try.
 \end{enumerate}
 \end{enumerate}
 \end{document}
