--- a/Homework_3.tex
+++ b/Homework_3.tex
@@ -25,22 +25,44 @@ c & \textrm{ if } n < 8\\
 \right.
 \]
 \begin{align*}
-\lim_{n\to\infty}\lim_{\varepsilon\to0}{\frac{n\log{n}}{n^{\log_{8}{16}+\varepsilon}}}&=\lim_{n\to\infty}\lim_{\varepsilon\to0}{\frac{n\log{n}}{n^{\frac{4}{3}+\varepsilon}}}\\
-&=\lim_{n\to\infty}\lim_{\varepsilon\to0}{(\frac{n}{n})(\frac{\log{n}}{n^{\frac{1}{3}}n^{\varepsilon}})}\\
-&=\lim_{n\to\infty}{(1)(\frac{\log{n}}{\sqrt[3]{n}(1)})}\\
-&=\lim_{n\to\infty}{\frac{\log{n}}{\sqrt[3]{n}}}\rightarrow0\\
+\lim_{n\to\infty}{\frac{n\log{n}}{n^{\log_{8}{16}+\varepsilon}}}&=\lim_{n\to\infty}{\frac{n\log{n}}{n^{\frac{4}{3}+\frac{2}{3}}}}\\
+&=\lim_{n\to\infty}{(\frac{n}{n})(\frac{\log{n}}{n})}\rightarrow0\\
+T(n)&\in\Theta(n^{\frac{4}{3}})
 \end{align*}
-From Knuth's concrete mathematics I know that any polynomial, even fractional powers, grows asytotically faster than a logarithm so this limit goes to 0. We have that problem one is the first case:
-$$T(n)\in\Theta(n^{\frac{4}{3}})$$\\
 By Akra-Bazzi I obtain:\\
 \begin{align*}
 16(1/8)^{p}&=1\\
 p&=\frac{4}{3}
 \end{align*}
 \begin{align*}
-T(n) &= \Theta(n^{p}(1+\int_{1}^{n}{\frac{u\log{u}}{u^{p+1}}du}))\\
-&= \Theta(-9n+10n^{\frac{4}{3}}-3n\log{n})\\
-&= \Theta(n^{\frac{4}{3}})\\
+T(n) &\in \Theta(n^{p}(1+\int_{1}^{n}{\frac{u\log{u}}{u^{p+1}}du}))\\
+&\in \Theta(-9n+10n^{\frac{4}{3}}-3n\log{n})\\
+&\in \Theta(n^{\frac{4}{3}})\\
 \end{align*}
+\item
+\[
+T(n) = \left\{
+\begin{array}{cl}
+c & \textrm{ if } n < 4\\
+8T(n/4) + n\log n & \textrm{ if } n \geq 4
+\end{array}
+\right.
+\]
+By Master Method I obtain:
+\begin{align*}
+    \lim_{n\to\infty}{\frac{n^{\frac{1}{3}}}{n^{\log_{8}{2}+\varepsilon}}}&=\lim_{n\to\infty}{\frac{n^{\frac{1}{3}}}{n^{\frac{1}{3}}}}\\
+    &=\lim_{n\to\infty}{1}\rightarrow1\\
+    &\in \Theta(n^{\frac{1}{3}}\log{n})\\
+\end{align*}
+By Akra-Bazzi I obtain:
+\begin{align*}
+    2(1/8)^{p}&=1\\
+    p&=\frac{1}{3}
+\end{align*}
+\begin{align*}
+    T(n) &\in \Theta(n^{p}(1+\int_{1}^{n}{\frac{u^{\frac{1}{3}}}{u^{p+1}}du}))\\
+    &\in \Theta(n^{\frac{1}{3}}+n^{\frac{1}{3}}\log{n})\\
+    &\in \Theta(n^{\frac{1}{3}}\log{n})\\
+    \end{align*}
 \end{enumerate}
 \end{document}
